Fixed cut off height.

--- a/frontend/frontend/src/pages/JobsList.module.css
+++ b/frontend/frontend/src/pages/JobsList.module.css
@@ -16,6 +16,8 @@
     padding: 8px;
     display: flex;
     flex-direction: column;
+    height: calc(100vh - calc(var(--nav-h) + 16px));
+
 }
 
 /* -------Search starts --------*/
@@ -161,7 +163,7 @@
 .cardList {
  
     
-    height: 875px;/* Changed from fixed 1100px */
+    height: calc(100vh - calc(var(--nav-h) + 16px));/* Changed from fixed 1100px */
     width: 100%;
     /* Spacing between cards */
     gap: var(--gap);
