--- a/frontend/frontend/src/pages/Setting.module.css
+++ b/frontend/frontend/src/pages/Setting.module.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 1300px;
+    height: calc(100vh - calc(var(--nav-h) + 16px));
     gap: 1rem;
     box-sizing: border-box;
     align-items: center;
